feat: Added favicon

--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clothes. Shiganshina.</title>
     <script src="https://kit.fontawesome.com/047746317e.js" defer></script>
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="stylesheet" href="product.css" />
   </head>
   <body>
@@ -47,109 +48,99 @@
     <main>
       <div class="container">
         <div class="left">
-          <div class="title">
-            MEN's
-          </div>
+          <div class="title">MEN's</div>
           <div class="samp-pic">
-            <img src="https://i.pinimg.com/originals/24/76/7c/24767c7a4715c0e60a6e3daad6597069.jpg" width="280" alt="">
+            <img
+              src="https://i.pinimg.com/originals/24/76/7c/24767c7a4715c0e60a6e3daad6597069.jpg"
+              width="280"
+              alt=""
+            />
           </div>
           <div class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
           </div>
         </div>
         <div class="right">
-          <div class="result">
-            Displaying 4 items from 1,000,000 results.
-          </div>
+          <div class="result">Displaying 4 items from 1,000,000 results.</div>
           <div class="item">
             <div class="avatar">
-              <img src="https://my-test-11.slatic.net/p/d246ddcd35243cac9744ee88fdd65eec.jpg_720x720q80.jpg_.webp" width="200" alt="">
+              <img
+                src="https://my-test-11.slatic.net/p/d246ddcd35243cac9744ee88fdd65eec.jpg_720x720q80.jpg_.webp"
+                width="200"
+                alt=""
+              />
             </div>
             <div class="info">
-              <div class="name">
-                Seagatae Expansaion
-              </div>
-              <div class="price">
-                £ 25.99
-              </div>
+              <div class="name">Seagatae Expansaion</div>
+              <div class="price">£ 25.99</div>
               <div class="buy">
                 <div class="quantity">
-                  <input class="qty" type="number" min="1" max="99" value="1">
+                  <input class="qty" type="number" min="1" max="99" value="1" />
                 </div>
-                <div class="btn">
-                  Buy
-                </div>
+                <div class="btn">Buy</div>
               </div>
             </div>
           </div>
 
           <div class="item">
             <div class="avatar">
-              <img src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-pants-men-photo-white-background-fashion-clothes-short-sleeve-shirt-pants-men-photo-149185132.jpg" width="200" alt="">
+              <img
+                src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-pants-men-photo-white-background-fashion-clothes-short-sleeve-shirt-pants-men-photo-149185132.jpg"
+                width="200"
+                alt=""
+              />
             </div>
             <div class="info">
-              <div class="name">
-                Seagatae Expansaion
-              </div>
-              <div class="price">
-                £ 25.99
-              </div>
+              <div class="name">Seagatae Expansaion</div>
+              <div class="price">£ 25.99</div>
               <div class="buy">
                 <div class="quantity">
-                  <input class="qty" type="number" min="1" max="99" value="1">
+                  <input class="qty" type="number" min="1" max="99" value="1" />
                 </div>
-                <div class="btn">
-                  Buy
-                </div>
+                <div class="btn">Buy</div>
               </div>
             </div>
           </div>
 
-
           <div class="item">
             <div class="avatar">
-              <img src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-jacket-jeans-mens-photos-made-white-background-fashion-clothes-short-sleeve-shirt-jacket-148909681.jpg" width="200" alt="">
+              <img
+                src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-jacket-jeans-mens-photos-made-white-background-fashion-clothes-short-sleeve-shirt-jacket-148909681.jpg"
+                width="200"
+                alt=""
+              />
             </div>
             <div class="info">
-              <div class="name">
-                Seagatae Expansaion
-              </div>
-              <div class="price">
-                £ 25.99
-              </div>
+              <div class="name">Seagatae Expansaion</div>
+              <div class="price">£ 25.99</div>
               <div class="buy">
                 <div class="quantity">
-                  <input class="qty" type="number" min="1" max="99" value="1">
+                  <input class="qty" type="number" min="1" max="99" value="1" />
                 </div>
-                <div class="btn">
-                  Buy
-                </div>
+                <div class="btn">Buy</div>
               </div>
             </div>
           </div>
 
-
           <div class="item">
             <div class="avatar">
-              <img src="https://i.pinimg.com/originals/26/28/6e/26286eb4226ef09560fff1210d38f5fd.jpg" width="200" alt="">
+              <img
+                src="https://i.pinimg.com/originals/26/28/6e/26286eb4226ef09560fff1210d38f5fd.jpg"
+                width="200"
+                alt=""
+              />
             </div>
             <div class="info">
-              <div class="name">
-                Seagatae Expansaion
-              </div>
-              <div class="price">
-                £ 25.99
-              </div>
+              <div class="name">Seagatae Expansaion</div>
+              <div class="price">£ 25.99</div>
               <div class="buy">
                 <div class="quantity">
-                  <input class="qty" type="number" min="1" max="99" value="1">
+                  <input class="qty" type="number" min="1" max="99" value="1" />
                 </div>
-                <div class="btn">
-                  Buy
-                </div>
+                <div class="btn">Buy</div>
               </div>
             </div>
           </div>
