--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clothes. Shiganshina.</title>
     <script src="https://kit.fontawesome.com/047746317e.js" defer></script>
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
